Modificações finais; Correção de erros na inserção ao BD; Ajustes nas classes e métodos